<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/put_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <EditText
        android:id="@+id/comment_put_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="start"
        android:hint="@string/comment_body_hint"
        android:textColor="@color/bright"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/comment_name_linear" />


    <LinearLayout
        android:id="@+id/comment_name_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@id/comment_email_linear"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/comment_put_name"
            android:textColor="@color/blue"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/comment_put_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/default_comment_name"
            android:textColor="@color/blue"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/comment_email_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/comment_put_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="10dp"
            android:text="@string/comment_put_email"
            android:textColor="@color/blue"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/comment_put_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:text="@string/default_comment_email"
            android:textColor="@color/blue"
            android:textSize="13sp" />
    </LinearLayout>


    <Button
        android:id="@+id/comment_put_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:background="@color/dark"
        android:text="@string/comment_put_button"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>