<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/put_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <ImageButton
        android:id="@+id/post_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/dark"
        android:src="@drawable/cross"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/post_put_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="start"
        android:hint="@string/post_body_hint"
        android:paddingHorizontal="10dp"
        android:textColor="@color/bright"
        app:layout_constraintBottom_toTopOf="@id/post_put_title" />

    <EditText
        android:id="@+id/post_put_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/post_title_hint"
        android:paddingHorizontal="10dp"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/post_put_button"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/post_put_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="20dp"
        android:background="@color/dark"
        android:text="@string/post_button"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>